fix spacing

--- a/react-site/src/components/About.css
+++ b/react-site/src/components/About.css
@@ -5,7 +5,7 @@
 .profilepic {
   height: 500px;
   width: 40%;
-  margin: 0% 2.5%;
+  margin: 20px 2.5% 0px 2.5%;
 }
 
 .profilepic img {
